--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,6 +47,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: matushorvath/xzintbit
+          path: xzintbit
 
       - run: ls -l
 
@@ -58,11 +59,13 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: matushorvath/msbasic
+          path: msbasic
 
       - name: Checkout 6502 functional tests
         uses: actions/checkout@v4
         with:
           repository: Klaus2m5/6502_65C02_functional_tests
+          path: 6502_65C02_functional_tests
 
       - name: Build
         working-directory: ./ic
