--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,9 +32,9 @@ jobs:
     name: Intcode OS=${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     env:
-      ICDIR: ${{env.GITHUB_WORKSPACE}}/xzintbit
-      MSBASICDIR: ${{env.GITHUB_WORKSPACE}}/msbasic
-      FUNCTESTDIR: ${{env.GITHUB_WORKSPACE}}/6502_65C02_functional_tests
+      ICDIR: $GITHUB_WORKSPACE/xzintbit
+      MSBASICDIR: $GITHUB_WORKSPACE/msbasic
+      FUNCTESTDIR: $GITHUB_WORKSPACE/6502_65C02_functional_tests
 
     strategy:
       matrix:
