--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,9 +32,9 @@ jobs:
     name: Intcode OS=${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     env:
-      ICDIR: $GITHUB_WORKSPACE/xzintbit
-      MSBASICDIR: $GITHUB_WORKSPACE/msbasic
-      FUNCTESTDIR: $GITHUB_WORKSPACE/6502_65C02_functional_tests
+      ICDIR: xzintbit
+      MSBASICDIR: msbasic
+      FUNCTESTDIR: 6502_65C02_functional_tests
 
     strategy:
       matrix:
@@ -47,29 +47,27 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: matushorvath/xzintbit
-          path: xzintbit
-
-      - run: ls -l
+          path: ic/xzintbit
 
       - name: Build xzintbit
         working-directory: ./xzintbit
-        run: ls -l ; make build-vm
+        run: make build-vm
 
       - name: Checkout Microsoft Basic
         uses: actions/checkout@v4
         with:
           repository: matushorvath/msbasic
-          path: msbasic
+          path: ic/msbasic
 
       - name: Checkout 6502 functional tests
         uses: actions/checkout@v4
         with:
           repository: Klaus2m5/6502_65C02_functional_tests
-          path: 6502_65C02_functional_tests
+          path: ic/6502_65C02_functional_tests
 
       - name: Build
         working-directory: ./ic
-        run: ls -l ; make build
+        run: make build
 
       - name: Test
         working-directory: ./ic
