--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
         run: sudo apt install -y cc65
 
       - name: Test
-        working-directory: ./js
+        working-directory: js
         run: |
           npm install
           npm test
@@ -50,7 +50,7 @@ jobs:
           path: ic/xzintbit
 
       - name: Build xzintbit
-        working-directory: ./xzintbit
+        working-directory: ic/xzintbit
         run: make build-vm
 
       - name: Checkout Microsoft Basic
@@ -66,9 +66,9 @@ jobs:
           path: ic/6502_65C02_functional_tests
 
       - name: Build
-        working-directory: ./ic
+        working-directory: ic
         run: make build
 
       - name: Test
-        working-directory: ./ic
+        working-directory: ic
         run: make test
