GitHub Actions fixes

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,8 +8,12 @@ on:
 
 jobs:
   build-javascript:
-    name: JavaScript
-    runs-on: ubuntu-latest
+    name: JavaScript OS=${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
       - uses: actions/checkout@v4
@@ -20,7 +24,15 @@ jobs:
           node-version: 20
 
       - name: Install cc65
-        run: sudo apt install -y cc65
+        run: |
+          if [ "$RUNNER_OS" == "Linux" ]; then
+            apt install -y cc65
+          elif [ "$RUNNER_OS" == "Windows" ]; then
+            choco install cc65-compiler
+          elif [ "$RUNNER_OS" == "macOS" ]; then
+            brew install cc65
+          fi
+        shell: bash
 
       - name: Test
         working-directory: js
@@ -29,12 +41,16 @@ jobs:
           npm test
 
   build-intcode:
-    name: Intcode
-    runs-on: ubuntu-latest
+    name: Intcode OS=${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
     env:
       ICDIR: xzintbit
       MSBASICDIR: msbasic
       FUNCTESTDIR: 6502_65C02_functional_tests
+
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
       - uses: actions/checkout@v4
@@ -56,7 +72,15 @@ jobs:
           path: ic/msbasic
 
       - name: Install cc65
-        run: sudo apt install -y cc65
+        run: |
+          if [ "$RUNNER_OS" == "Linux" ]; then
+            apt install -y cc65
+          elif [ "$RUNNER_OS" == "Windows" ]; then
+            choco install cc65-compiler
+          elif [ "$RUNNER_OS" == "macOS" ]; then
+            brew install cc65
+          fi
+        shell: bash
 
       - name: Build Microsoft Basic
         working-directory: ic/msbasic
