GitHub Actions fixes

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,17 +6,10 @@ on:
     branches:
       - main
 
-env:
-  CC: gcc
-
 jobs:
   build-javascript:
-    name: JavaScript OS=${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+    name: JavaScript
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
@@ -27,15 +20,7 @@ jobs:
           node-version: 20
 
       - name: Install cc65
-        run: |
-          if [ "$RUNNER_OS" == "Linux" ]; then
-            sudo apt install -y cc65
-          elif [ "$RUNNER_OS" == "Windows" ]; then
-            choco install cc65-compiler
-          elif [ "$RUNNER_OS" == "macOS" ]; then
-            brew install cc65
-          fi
-        shell: bash
+        run: sudo apt install -y cc65
 
       - name: Test
         working-directory: js
@@ -44,16 +29,13 @@ jobs:
           npm test
 
   build-intcode:
-    name: Intcode OS=${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
+    name: Intcode
+    runs-on: ubuntu-latest
+
     env:
       ICDIR: xzintbit
       MSBASICDIR: msbasic
       FUNCTESTDIR: 6502_65C02_functional_tests
-
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
       - uses: actions/checkout@v4
@@ -75,15 +57,7 @@ jobs:
           path: ic/msbasic
 
       - name: Install cc65
-        run: |
-          if [ "$RUNNER_OS" == "Linux" ]; then
-            sudo apt install -y cc65
-          elif [ "$RUNNER_OS" == "Windows" ]; then
-            choco install cc65-compiler
-          elif [ "$RUNNER_OS" == "macOS" ]; then
-            brew install cc65
-          fi
-        shell: bash
+        run: sudo apt install -y cc65
 
       - name: Build Microsoft Basic
         working-directory: ic/msbasic
