Adopt new print_num_radix interface

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,8 @@ jobs:
         os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout vm6502
+        uses: actions/checkout@v4
 
       - name: Checkout xzintbit
         uses: actions/checkout@v4
