--- a/video/package.json
+++ b/video/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "promise.withresolvers": "^1.0.2",
     "sharp": "^0.33.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.0"
   }
 }
