--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,9 +12,9 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     env:
-      ICDIR: xzintbit
-      MSBASICDIR: msbasic
-      FUNCTESTDIR: 6502_65C02_functional_tests
+      ICDIR: ../xzintbit
+      MSBASICDIR: ../msbasic
+      FUNCTESTDIR: ../6502_65C02_functional_tests
 
     strategy:
       matrix:
@@ -23,6 +23,8 @@ jobs:
     steps:
       - name: Checkout vm6502
         uses: actions/checkout@v4
+        with:
+          path: vm6502
 
       - name: Checkout xzintbit
         uses: actions/checkout@v4
@@ -65,16 +67,18 @@ jobs:
           path: 6502_65C02_functional_tests
 
       - name: Build
+        working-directory: vm6502
         run: make build
         shell: bash
 
       - name: Test
+        working-directory: vm6502
         run: make test
 
       - name: Store artifact
         uses: actions/upload-artifact@v4
         with:
           name: msbasic.input
-          path: bin/msbasic.input
+          path: vm6502/bin/msbasic.input
           if-no-files-found: error
         if: github.ref == 'refs/heads/main' && matrix.os == 'ubuntu-latest'
