--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: matushorvath/msbasic
+          ref: vm6502
           path: msbasic
 
       - name: Install cc65
